force-app/main/default/objects/Onboarding_Application__c/Onboarding_Application__c.object-meta.xml
<CustomObject>
    <description>Digitization - Client Onboarding. This object stores the client initiated request to onboard an entity</description>
    <label>Onboarding Application</label>
    <nameField>
        <displayFormat>OA-{000000000}</displayFormat>
        <label>Onboarding Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>