force-app/main/default/objects/Onboarding_Application__c/fields/Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Application_Id__c</fullName>
    <label>Application Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>