force-app/main/default/objects/Onboarding_Application__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The (prospectiive) client record that has been submitted through the client experience portal for onboarding</description>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Onboarding Applications</relationshipLabel>
    <relationshipName>Onboarding_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>