force-app/main/default/objects/Onboarding_Application__c/fields/Primary_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Primary_Data_Source__c</fullName>
    <description>The primary source where the client data originated from. Currently includes Salesforce; SAP; Public Source  e.g. PbVerify</description>
    <label>Primary Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>