force-app/main/default/objects/Onboarding_Application__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>The type of request as determined by the on boarding process in salesforce</description>
    <inlineHelpText>Type of application requested.</inlineHelpText>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Hierarchy</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>Request Consent</fullName>
            </value>
            <value>
                <fullName>Hierarchy Change</fullName>
                <isActive>false</isActive>
                <label>Hierarchy Change</label>
            </value>
            <value>
                <fullName>New On-boarding</fullName>
                <isActive>false</isActive>
                <label>New On-boarding</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>