force-app/main/default/objects/Onboarding_Application__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <description>The person who requested the on-boarding request</description>
    <inlineHelpText>The person who has submitted the request for approval/review.</inlineHelpText>
    <label>Requested By</label>
    <type>TextArea</type>
</CustomField>