force-app/main/default/objects/Onboarding_Application__c/fields/Requester_Number__c.field-meta.xml
<CustomField>
    <fullName>Requester_Number__c</fullName>
    <description>The contact numb er of the person who requested the onboarding</description>
    <label>Requester Number</label>
    <type>Phone</type>
</CustomField>