force-app/main/default/objects/Onboarding_Application__c/recordTypes/CommB_Request_Consent.recordType-meta.xml
<RecordType>
    <fullName>CommB_Request_Consent</fullName>
    <active>true</active>
    <description>This RecType is used By CommB Users</description>
    <label>CommB Request Consent</label>
</RecordType>